<resources>
    <string name="app_name">youxizixun</string>
    <string name="text_label_1" />
    <string name="text_label_2" />
    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone">手机号</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_secret">保密</string>
    <string name="birthday">生日</string>
    <string name="birthday_title">请选择你的生日</string>
</resources>
